# kmu-esg-reporter

./: .env.example  Dockerfile  README.md  esg_reporter.db  init.sql  main.py  pyproject.toml  requirements.txt  sample_data.py
app/: __init__.py
app/core/auth/: __init__.py
app/core/database/: __init__.py  __init__bk20250921.py  base.py  models.py  models_bk20250921.py
app/core/logging/: __init__.py
app/data/: __init__.py
app/data/input/: __init__.py  base_importer.py  erp_connector.py  excel_importer.py  external_api.py  manual_input.py
app/data/models/: __init__.py
app/data/processors/: __init__.py  data_processor.py  data_processor_bk20250921.py
app/data/visualization/: __init__.py  esg_charts.py
app/services/: __init__.py
app/services/chatbot/: __init__.py  esg_chatbot.py  langchain_handler.py
app/services/chatbot/langgraph/: esg_chatbot.py  ui_more_detail_demo.py
app/services/report/: ai_enrich.py  ai_schemas.py  fonts.py  generator.py  renderer.py  sections.py  types.py
app/services/report/templates/: base.html  section_environment.html  section_governance.html  section_social.html
app/ui/: __init__.py  main_app.py
app/ui/actions/: report_download.py
app/ui/pages/: __init__.py  base_page.py  chatbot.py  chatbot_langgraph.py  company_management.py  dashboard.py  data_input.py  environment.py  hr.py  visualization.py
config/: settings.py
